# nexora_assiduidade/app/src/main/java/tech/e258tech/nexora_assiduidade/data/model/response/FaceVerifyResponse.kt
@@ -6,5 +6,6 @@ data class FaceVerifyResponse(
     val confidence_score: Double?,
     val liveness_score: Double?,
     val timestamp: String?,
-    val reason: String?
+    val reason: String?,
+    val verification_token: String?
 )
